--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/Tree.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/Tree.cshtml
@@ -19,26 +19,13 @@
 <table class="adminContent">
     <tr>
         <td>
-			@*codehint: sm-edit*@
             @(Html.Telerik().TreeView()
-        .Name("category-treeview")
-        .BindTo(Model, (item, category) =>
-        {
-			item.Text = category.GetCategoryTreeName();
-            item.Value = category.Id.ToString();
-            item.LoadOnDemand = categoryService.GetAllCategoriesByParentCategoryId(category.Id, true).Count > 0;
-            item.Enabled = true;
-            item.ImageUrl = Url.Content(category.Published ? "~/Administration/Content/images/ico-content.png" : "~/Administration/Content/images/ico-content-o60.png");
-        })
-        .ClientEvents(events => events
-                        .OnSelect("onSelect")
-                        .OnNodeDropped("onNodeDropped")
-                )
-        .DataBinding(dataBinding => dataBinding
-                            .Ajax().Select("TreeLoadChildren", "Category")
-        )
-        .ShowLines(true)
+                .Name("category-treeview")
+                .ClientEvents(events => events.OnSelect("onSelect").OnNodeDropped("onNodeDropped"))
+                .DataBinding(dataBinding => dataBinding.Ajax().Enabled(true).Select("TreeLoadChildren", "Category"))
+                .ShowLines(true)
                 .DragAndDrop(true))
+
             <script type="text/javascript">
             function onNodeDropped(e) {
                 var treeview = $('#category-treeview').data("tTreeView");
