Added "WidgetZone" EditorTemplate to AdminUI for more convenient (multi) widget zone pickup

--- a/src/Presentation/SmartStore.Web/Administration/Views/Topic/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Topic/_CreateOrUpdate.cshtml
@@ -117,7 +117,7 @@
                 @Html.SmartLabelFor(model => model.WidgetZone)
             </td>
             <td class="adminData">
-                @Html.TextBoxFor(x => x.WidgetZone, new { @style = "width:95%" })
+                @Html.EditorFor(model => model.WidgetZone, "WidgetZone")
                 @Html.ValidationMessageFor(model => model.WidgetZone)
             </td>
         </tr>
