Lots of minor optimizations: perf, installation, db commit fault tolerance, 'TabStripCreated' event refactoring & other stuff

--- a/src/Presentation/SmartStore.Web/Administration/Views/ContentSlider/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ContentSlider/_CreateOrUpdate.cshtml
@@ -11,7 +11,7 @@
 	x.Add().Text(T("Admin.Common.Stores").Text).Content(TabStores());
     
     //generate an event
-	EngineContext.Current.Resolve<IEventPublisher>().Publish(new AdminTabStripCreated(x, "content-slide-edit", this.Html, this.Model));
+	EngineContext.Current.Resolve<IEventPublisher>().Publish(new TabStripCreated(x, "content-slide-edit", this.Html, this.Model));
 })
 
     <script type="text/javascript">
