--- a/src/Presentation/SmartStore.Web/Administration/Views/Topic/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Topic/_CreateOrUpdate.cshtml
@@ -46,7 +46,7 @@
 	x.Add().Text(T("Admin.Common.Stores").Text).Content(TabStores());
     
     //generate an event
-    EngineContext.Current.Resolve<IEventPublisher>().Publish(new AdminTabStripCreated(x, "topic-edit", this.Html, this.Model));
+    EngineContext.Current.Resolve<IEventPublisher>().Publish(new TabStripCreated(x, "topic-edit", this.Html, this.Model));
 })
 @helper TabInfo()
     { 
