--- a/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
@@ -51,7 +51,7 @@
         @Html.Widget("orderdetails_page_top")
         <dl class="x-order-overview dl-horizontal">
             <dt>@T("Order.Order#"):</dt>
-            <dd>@Model.Id</dd>
+            <dd>@Model.OrderNumber</dd>
 
             <dt>@T("Order.OrderDate"):</dt>
             <dd>@Model.CreatedOn.ToString("D")</dd>
