--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.SingleVariant.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.SingleVariant.cshtml
@@ -369,13 +369,6 @@
             e.preventDefault();
             $("#productquestion-window").find("form").submit();
         });
-    });
-</script>
-
-
-
-<script type="text/javascript">
-    $(function () {
 
         var settings = {
             galleryWidth: 318,
@@ -389,9 +382,12 @@
 
         $('#product-details-form').productDetail(settings);
 
-        var moreLess = $('.more-less');
-        if (moreLess.height() > 260) {
-            $('.more-less').moreLess();
+        if( toBool('@(Model.EnableHtmlTextCollapser)') )
+        {
+            var moreLess = $('.more-less');
+            if (moreLess.height() > parseInt(@(Model.HtmlTextCollapsedHeight))) {
+                $('.more-less').moreLess(parseInt(@(Model.HtmlTextCollapsedHeight)));
+            }
         }
     });
 </script>
