Better handling of localized SEO urls (new settings: DetectBrowserUserLanguage, DefaultLanguageRedirectBehaviour and InvalidLanguageRedirectBehaviour)

--- a/src/Presentation/SmartStore.Web/Views/Common/LanguageSelector.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/LanguageSelector.cshtml
@@ -14,7 +14,7 @@
             {
                 <li @Html.Attr("class", "selected", Model.CurrentLanguageId == lang.Id)>
                     <a title="@lang.NativeName" rel="tooltip" class='language @(Model.UseImages ? "flag" : "regional-label")'
-                        href="@webHelper.ModifyQueryString(Url.RouteUrl("ChangeLanguage", new { langid = lang.Id }), "returnurl=" + HttpUtility.UrlEncode(HttpContext.Current.Request.RawUrl), null)">
+                        href="@webHelper.ModifyQueryString(Url.RouteUrl("ChangeLanguage", new { langid = lang.Id }), "returnurl=" + Model.ReturnUrls[lang.SeoCode], null)">
                         @if (Model.UseImages) 
                         {
                             <img title='@lang.Name' alt='@lang.Name' @(lang.Id == Model.CurrentLanguageId ? " class=selected" : null)
