--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/GeneralCommon.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/GeneralCommon.cshtml
@@ -28,10 +28,12 @@
         $("#@Html.FieldIdFor(model => model.StoreInformationSettings.StoreClosed)").click(toggleStoreClosed);
         $("#@Html.FieldIdFor(model => model.SecuritySettings.CaptchaEnabled)").click(toggleReCaptcha);
         $("#@Html.FieldIdFor(model => model.SocialSettings.ShowSocialLinksInFooter)").click(toggleSocialLinks);
+        $("#@Html.FieldIdFor(model => model.LocalizationSettings.SeoFriendlyUrlsForLanguagesEnabled)").click(toggleSeoLanguageUrls);
 
         toggleSocialLinks();
         toggleStoreClosed();
         toggleReCaptcha();
+        toggleSeoLanguageUrls();
     });
 
     function toggleSocialLinks() {
@@ -85,6 +87,17 @@
             $('#ssCaptchaShowOnProductReviewPagepnl').hide();
             $('#ssReCaptchaPublicKeypnl').hide();
             $('#ssReCaptchaPrivateKeypnl').hide();
+        }
+    }
+
+    function toggleSeoLanguageUrls() {
+        if ($('#@Html.FieldIdFor(model => model.LocalizationSettings.SeoFriendlyUrlsForLanguagesEnabled)').is(':checked')) {
+            $('#pnlDefaultLanguageRedirectBehaviour').show();
+            $('#pnlInvalidLanguageRedirectBehaviour').show();
+        }
+        else {
+            $('#pnlDefaultLanguageRedirectBehaviour').hide();
+            $('#pnlInvalidLanguageRedirectBehaviour').hide();
         }
     }
 </script>
@@ -393,6 +406,15 @@
         </tr>
         <tr>
             <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.LocalizationSettings.UseImagesForLanguageSelection)
+            </td>
+            <td class="adminData">
+                @Html.EditorFor(model => model.LocalizationSettings.UseImagesForLanguageSelection)
+                @Html.ValidationMessageFor(model => model.LocalizationSettings.UseImagesForLanguageSelection)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.LocalizationSettings.SeoFriendlyUrlsForLanguagesEnabled)
             </td>
             <td class="adminData">
@@ -400,13 +422,31 @@
                 @Html.ValidationMessageFor(model => model.LocalizationSettings.SeoFriendlyUrlsForLanguagesEnabled)
             </td>
         </tr>
-        <tr>
+        <tr id="pnlDefaultLanguageRedirectBehaviour">
             <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.LocalizationSettings.UseImagesForLanguageSelection)
+                @Html.SmartLabelFor(model => model.LocalizationSettings.DefaultLanguageRedirectBehaviour)
             </td>
             <td class="adminData">
-                @Html.EditorFor(model => model.LocalizationSettings.UseImagesForLanguageSelection)
-                @Html.ValidationMessageFor(model => model.LocalizationSettings.UseImagesForLanguageSelection)
+                @Html.DropDownListForEnum(model => model.LocalizationSettings.DefaultLanguageRedirectBehaviour)
+                @Html.ValidationMessageFor(model => model.LocalizationSettings.DefaultLanguageRedirectBehaviour)
+            </td>
+        </tr>
+        <tr id="pnlInvalidLanguageRedirectBehaviour">
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.LocalizationSettings.InvalidLanguageRedirectBehaviour)
+            </td>
+            <td class="adminData">
+                @Html.DropDownListForEnum(model => model.LocalizationSettings.InvalidLanguageRedirectBehaviour)
+                @Html.ValidationMessageFor(model => model.LocalizationSettings.InvalidLanguageRedirectBehaviour)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.LocalizationSettings.DetectBrowserUserLanguage)
+            </td>
+            <td class="adminData">
+                @Html.EditorFor(model => model.LocalizationSettings.DetectBrowserUserLanguage)
+                @Html.ValidationMessageFor(model => model.LocalizationSettings.DetectBrowserUserLanguage)
             </td>
         </tr>
     </table>
