Minor fixes (again)

--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/navbar.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/navbar.less
@@ -294,6 +294,6 @@
 	padding-left: 12px; // otherwise mouse slips out easily from dropdown
 	top: auto; /* for FF, IE, Opera */
 	
-	.wkit & { top: -0.5em; /* reset 'top' for wkit */ }
+	/*.wkit & { top: -0.5em; }*/ // reset 'top' for wkit (UPDATE 04.10.2013: seems to work with current Chrome)
 	.ie & 	{ font-size: 30px; /* too small in IE, enlarge! */ }
 }
