#94 option to switch back to mobile theme

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -3270,3 +3270,9 @@ pre{white-space:pre-wrap;/* css-3 */white-space:0;/* Mozilla, since 1999 */white
     text-align: center;
     .border-radius(0);
 }
+
+#switch-to-mobile {
+    text-align: center;
+    margin: 0 0 10px 0;
+    display: none;
+}
