--- a/src/Presentation/SmartStore.Web/Views/Common/ChangeDeviceBlock.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/ChangeDeviceBlock.cshtml
@@ -1,4 +1,4 @@
 ﻿<div class="change-device">
-    <a href="@(Url.RouteUrl("ChangeDevice", new { dontusemobileversion = false }))">
+    <a class="btn btn-info" href="@(Url.RouteUrl("ChangeDevice", new { dontusemobileversion = false }))">
         @T("Mobile.ViewMobileVersion")</a>
 </div>
