Social links didn't open in a new brower window

--- a/src/Presentation/SmartStore.Web/Views/Common/Footer.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Footer.cshtml
@@ -13,19 +13,19 @@
                 <div class="content">
                     @if (!String.IsNullOrEmpty(Model.FacebookLink))
                     {
-                        <a href="@Model.FacebookLink"><i class="icon-facebook-sign"></i></a>
+                        <a href="@Model.FacebookLink" target="_blank"><i class="icon-facebook-sign"></i></a>
                     }
                     @if (!String.IsNullOrEmpty(Model.GooglePlusLink))
                     {
-                        <a href="@Model.GooglePlusLink"><i class="icon-google-plus-sign"></i></a>
+                        <a href="@Model.GooglePlusLink" target="_blank"><i class="icon-google-plus-sign"></i></a>
                     }
                     @if (!String.IsNullOrEmpty(Model.TwitterLink))
                     {
-                        <a href="@Model.TwitterLink"><i class="icon-twitter-sign"></i></a>
+                        <a href="@Model.TwitterLink" target="_blank"><i class="icon-twitter-sign"></i></a>
                     }
                     @if (!String.IsNullOrEmpty(Model.PinterestLink))
                     {
-                        <a href="@Model.PinterestLink"><i class="icon-pinterest"></i></a>
+                        <a href="@Model.PinterestLink" target="_blank"><i class="icon-pinterest"></i></a>
                     }
                 </div>
             </div>
