TS application-id has to be saved for each order

--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.SingleVariant.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.SingleVariant.cshtml
@@ -386,7 +386,7 @@
         {
             var moreLess = $('.more-less');
             if (moreLess.height() > parseInt(@(Model.HtmlTextCollapsedHeight))) {
-                $('.more-less').moreLess(parseInt(@(Model.HtmlTextCollapsedHeight)));
+                $('.more-less').moreLess({ adjustheight: parseInt(@(Model.HtmlTextCollapsedHeight))});
             }
         }
     });
